--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "path": "^0.12.7",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-helmet": "^3.1.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
     "react-router-redux": "^4.0.6",
     "redux": "^3.6.0",
+    "redux-auth-wrapper": "^0.8.0",
     "redux-devtools": "^3.3.1",
     "redux-thunk": "^2.1.0",
     "todomvc-app-css": "^2.0.6",
@@ -39,6 +41,8 @@
     "html-loader": "^0.4.4",
     "jsx-loader": "^0.13.2",
     "node-sass": "^3.10.0",
+    "redux-devtools-dock-monitor": "^1.1.1",
+    "redux-devtools-log-monitor": "^1.0.11",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
