--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "whatwg-fetch": "^1.0.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.14.0",
+    "babel-cli": "^6.16.0",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
@@ -41,8 +41,12 @@
     "html-loader": "^0.4.4",
     "jsx-loader": "^0.13.2",
     "node-sass": "^3.10.0",
+    "redux-devtools-chart-monitor": "^1.4.2",
     "redux-devtools-dock-monitor": "^1.1.1",
+    "redux-devtools-extension": "^1.0.0",
+    "redux-devtools-inspector": "^0.8.0",
     "redux-devtools-log-monitor": "^1.0.11",
+    "redux-slider-monitor": "^1.0.7",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
