--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "classnames": "^2.2.5",
     "express": "^4.14.0",
     "koa": "^2.0.0",
+    "normalize.css": "^5.0.0",
     "path": "^0.12.7",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
