--- a/package.json
+++ b/package.json
@@ -15,15 +15,23 @@
     "babel-polyfill": "^6.13.0",
     "classnames": "^2.2.5",
     "express": "^4.14.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "install": "^0.8.1",
     "koa": "^2.0.0",
+    "material-design-icons": "^3.0.1",
+    "material-ui": "^0.16.0",
     "normalize.css": "^5.0.0",
+    "npm": "^3.10.8",
     "path": "^0.12.7",
     "react": "^15.3.2",
+    "react-bootstrap": "^0.30.5",
+    "react-burger-menu": "^1.10.8",
     "react-dom": "^15.3.2",
     "react-helmet": "^3.1.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
     "react-router-redux": "^4.0.6",
+    "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.6.0",
     "redux-auth-wrapper": "^0.8.0",
     "redux-devtools": "^3.3.1",
@@ -37,6 +45,7 @@
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-2": "^6.13.0",
+    "bootstrap-loader": "^2.0.0-beta.12",
     "css-loader": "^0.25.0",
     "file-loader": "^0.9.0",
     "html-loader": "^0.4.4",
