--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "install": "^0.8.1",
     "koa": "^2.0.0",
     "material-design-icons": "^3.0.1",
-    "material-ui": "^0.16.0",
+    "material-ui": "^0.16.1",
     "normalize.css": "^5.0.0",
     "npm": "^3.10.8",
     "path": "^0.12.7",
@@ -32,6 +32,7 @@
     "react-router": "^2.8.1",
     "react-router-redux": "^4.0.6",
     "react-tap-event-plugin": "^1.0.0",
+    "react-title-component": "^1.0.1",
     "redux": "^3.6.0",
     "redux-auth-wrapper": "^0.8.0",
     "redux-devtools": "^3.3.1",
