--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.14.0",
     "babel-core": "^6.14.0",
     "babel-polyfill": "^6.13.0",
+    "chart.js": "^2.3.0",
     "classnames": "^2.2.5",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
@@ -26,6 +27,7 @@
     "react": "^15.3.2",
     "react-bootstrap": "^0.30.5",
     "react-burger-menu": "^1.10.8",
+    "react-chartjs-2": "^1.5.0",
     "react-dom": "^15.3.2",
     "react-helmet": "^3.1.0",
     "react-redux": "^4.4.5",
