--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "koa": "^2.0.0",
     "material-design-icons": "^3.0.1",
     "material-ui": "^0.16.1",
+    "md5": "^2.2.1",
+    "multer": "^1.3.0",
     "normalize.css": "^5.0.0",
     "npm": "^3.10.8",
     "path": "^0.12.7",
@@ -34,7 +36,7 @@
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
     "react-router-redux": "^4.0.6",
-    "react-tap-event-plugin": "^1.0.0",
+    "react-tap-event-plugin": "^2.0.1",
     "react-title-component": "^1.0.1",
     "redux": "^3.6.0",
     "redux-auth-wrapper": "^0.8.0",
